--- a/main.html
+++ b/main.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+	<head>
+		<link rel="stylesheet" href="styles.css">
+	</head>
+	<body>
+		<div role="tag">
+		<nav role="navigation"></nav>
+		<img src="" role="img">
+		<h1 role="heading"></h1>
+		<ul role="list">
+			<li role="listitem"></li>
+		</ul>
+	</div>
+		<!-- the entire body must be written by student -->
+	    <script type="text/javascript" src="./script.js">
+	</script>
+	</body>
 </html>
